Fix height of edit window on mobile.

--- a/Login.Ui/src/app/components/edit/edit.component.css
+++ b/Login.Ui/src/app/components/edit/edit.component.css
@@ -32,6 +32,7 @@ body,
   border:none;
   background-color: darkslategrey;
   color: #D7DBDD;
+  min-height: 100vh;
 }
 
 .save {
