--- a/Login.Ui/src/app/components/home/home.component.css
+++ b/Login.Ui/src/app/components/home/home.component.css
@@ -49,14 +49,14 @@
 
   .heading {
     display: block;
-    padding-top: 40px;
+    padding-top: 15px;
     padding-left: 40px;
     padding-right: 40px;
   }
 
   .heading p {
     font-size: 1.6em;
-    font-family: 'Gugi', cursive;
+    font-family: 'PT Sans', sans-serif;
     line-height: 1.414;
     letter-spacing: 0.025em;
     font-size: 2rem;
